fix resource display overflow with many upcoming reservations

--- a/Web/css/booked.css
+++ b/Web/css/booked.css
@@ -2690,6 +2690,11 @@ ul.jqtree-tree .jqtree-toggler {
   padding-top: 80px;
   overflow-y: hidden;
 }
+.resource-display .upcoming-reservations {
+  position: absolute;
+  top: 80px;
+  bottom: 0;
+}
 .resource-display .upcoming-separator {
   height: 1px;
   padding: 0;
