--- a/Web/css/less/resource-display.less
+++ b/Web/css/less/resource-display.less
@@ -78,6 +78,12 @@
     overflow-y:hidden;
   }
 
+  .upcoming-reservations {
+    position:absolute;
+    top:80px;
+    bottom:0;
+  }
+
   .upcoming-separator {
     height:1px;
     padding:0;
